# openapi/go/models/model_web_authn_start_response_authenticator_selection.go
@@ -1,10 +1,0 @@
-package models
-
-type WebAuthnStartResponseAuthenticatorSelection struct {
-
-	AuthenticatorAttachment string `json:"authenticatorAttachment,omitempty"`
-
-	RequireResidentKey bool `json:"requireResidentKey,omitempty"`
-
-	UserVerification string `json:"userVerification,omitempty"`
-}
