# openapi/go/models/model_web_authn_start_response_exclude_credentials_inner.go
@@ -1,8 +1,0 @@
-package models
-
-type WebAuthnStartResponseExcludeCredentialsInner struct {
-
-	Id string `json:"id,omitempty"`
-
-	Type string `json:"type,omitempty"`
-}
