# openapi/go/models/model_web_authn_start_response_extensions.go
@@ -1,10 +1,0 @@
-package models
-
-type WebAuthnStartResponseExtensions struct {
-
-	Appid string `json:"appid,omitempty"`
-
-	AuthnSel string `json:"authnSel,omitempty"`
-
-	Exts bool `json:"exts,omitempty"`
-}
