# openapi/go/models/model_web_authn_start_response_pub_key_cred_params_inner.go
@@ -1,8 +1,0 @@
-package models
-
-type WebAuthnStartResponsePubKeyCredParamsInner struct {
-
-	Alg int64 `json:"alg,omitempty"`
-
-	Type string `json:"type,omitempty"`
-}
