# openapi/go/models/model_web_authn_start_response_rp.go
@@ -1,8 +1,0 @@
-package models
-
-type WebAuthnStartResponseRp struct {
-
-	Id string `json:"id,omitempty"`
-
-	Name string `json:"name,omitempty"`
-}
