# openapi/go/models/model_web_authn_start_response_user.go
@@ -1,10 +1,0 @@
-package models
-
-type WebAuthnStartResponseUser struct {
-
-	Id string `json:"id,omitempty"`
-
-	Name string `json:"name,omitempty"`
-
-	DisplayName string `json:"displayName,omitempty"`
-}
